Fix: country selector text being cut off at bottom

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,6 +86,11 @@ body {
     font-size: 1.25rem;
 }
 
+#payment-form select{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 .footer{
     color: white;
     position: fixed;
@@ -345,7 +350,7 @@ a:hover{
     .display-4{
         font-size: 2.5rem;
     }
-    /*----- Notifications ----- */
+/*----- Notifications ----- */
     .message-container{
         position: fixed;
         bottom: 0px;
